group 'com.khronodragon'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'scala'
apply plugin: 'idea'
apply plugin: 'application'

sourceCompatibility = 1.8
archivesBaseName = 'glabot'
mainClassName = 'com.khronodragon.glabot.Start'

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    compile 'net.dv8tion:JDA:3.0.0_189'
    compile 'org.scala-lang:scala-library:2.12.2'
    compile 'com.google.code.gson:gson:2.8.0'
    compile 'com.typesafe.play:play-json_2.11:2.6.0-M7'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

tasks.withType(ScalaCompile) {
    configure(scalaCompileOptions.forkOptions) {
        memoryMaximumSize = '1G'
        jvmArgs = ['-XX:MaxPermSize=512M']
    }
}

compileJava.options.encoding = 'UTF-8'
compileScala.options.encoding = 'UTF-8'